# DOVE

./: .envrc  .gitignore  README.md  pyproject.toml  requirements.txt
finetune/: accelerate_config.yaml  launch.py  train.py  train_ddp_one_s1.sh  train_ddp_one_s2.sh  train_ddp_wan_s1.sh  train_ddp_wan_s2.sh  trainer.py
finetune/configs/: zero3.yaml
finetune/configs/experiments/: README.md  dove_s1.yaml  dove_s2.yaml  wan_s1.yaml  wan_s2.yaml
finetune/datasets/: degradation.py  real_sr_image_video_dataset.py  utils.py
finetune/models/wan/: base.py  lora_one_s1_trainer.py  lora_one_s2_trainer.py  sft_one_s1_trainer.py  sft_one_s2_trainer.py
finetune/schemas/: args.py
finetune/scripts/: prepare_sft_ckpt.py
pretrained_models/: README.md
