[project]
name = "dove"
version = "0.1.0"
description = "DOVE: Efficient One-Step Diffusion Model for Real-World Video Super-Resolution"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate>=1.1.1",
  "av",
  "decord",
  "diffusers[torch]",
  "gradio>=5.5.0",
  "imageio>=2.35.1",
  "imageio-ffmpeg>=0.5.1",
  "moviepy>=2.0.0",
  "numpy==1.26.0",
  "openai>=1.54.0",
  "opencv-python",
  "peft",
  "pydantic>=2.10.3",
  "pyiqa",
  "scikit-video>=1.1.11",
  "sentencepiece>=0.2.0",
  "setuptools<82",
  "swissarmytransformer>=0.4.12",
  "torch>=2.5.0",
  "torchdiffeq",
  "torchvision>=0.20.0",
  "transformers>=4.46.2",
  "wandb",
]

[tool.uv]
package = false
constraint-dependencies = ["filterpy==1.4.4"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
